# mdev

./: .gitignore  PackGuide.md  README.md  setup.cfg  test.py
src/east/: log.py  main.py
src/mdev/: build.py  env.py  log.py  main.py  project_management.py
src/mdev/lib/: __init__.py  exceptions.py  json_helpers.py  logging.py  python_helpers.py
src/mdev/project/: __init__.py  exceptions.py  mxos_program.py  project.py
src/mdev/project/_internal/: __init__.py  git_utils.py  libraries.py  progress.py  project_data.py  render_templates.py
src/mdev/project/_internal/templates/: CMakeLists-app.tmpl  CMakeLists.tmpl  __init__.py  gitignore.tmpl  main.tmpl  mxos_config.tmpl
