[metadata]
name = mdev
version = 0.1.8
author = Snow Yang
author_email = snowyang.iot@outlook.com
description = Tool for build MXOS application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartsnow/mdev
project_urls =
    Bug Tracker = https://github.com/smartsnow/mdev/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    rich
    click
    requests
    colorama
    tdqm
    GitPython
    jinja2

[options.packages.find]
where = src

[options.package_data]
* = *.tmpl

[options.entry_points]
console_scripts =
    mdev = mdev.main:main